--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,196 @@
   organization = {G2 Learn}
 }
 
+@article{Nakamoto2008Bitcoin,
+  author    = {Nakamoto, Satoshi},
+  title     = {Bitcoin: A Peer-to-Peer Electronic Cash System},
+  year      = {2008},
+  url       = {https://bitcoin.org/bitcoin.pdf},
+  urldate   = {2025-05-10}
+}
+
+@book{Tapscott2016Blockchain,
+  author    = {Tapscott, Don and Tapscott, Alex},
+  title     = {Blockchain Revolution: How the Technology Behind Bitcoin Is Changing Money, Business, and the World},
+  publisher = {Portfolio},
+  year      = {2016},
+  isbn      = {978-1101980132}
+}
+
+@article{Veuger2018RealEstateBlockchain,
+  author    = {Veuger, Jan},
+  title     = {Trust in a viable real estate economy with disruption and blockchain},
+  journal   = {Facilities},
+  volume    = {36},
+  number    = {1/2},
+  pages     = {103-120},
+  year      = {2018},
+  doi       = {10.1108/F-11-2017-0106}
+}
+
+@online{Buterin2014Ethereum,
+  author    = {Buterin, Vitalik},
+  title     = {Ethereum White Paper: A Next-Generation Smart Contract and Decentralized Application Platform},
+  year      = {2014},
+  url       = {https://ethereum.org/en/whitepaper/},
+  urldate   = {2025-05-12}
+}
+
+@article{Szabo1997SmartContracts,
+  author    = {Szabo, Nick},
+  title     = {Formalizing and Securing Relationships on Public Networks},
+  journal   = {First Monday},
+  volume    = {2},
+  number    = {9},
+  year      = {1997},
+  url       = {https://firstmonday.org/ojs/index.php/fm/article/view/548}
+}
+
+@article{Zheng2018BlockchainChallenges,
+  author    = {Zheng, Zibin and Xie, Shaoan and Dai, Hong-Ning and Chen, Xiangping and Wang, Huaimin},
+  title     = {Blockchain challenges and opportunities: a survey},
+  journal   = {International Journal of Web and Grid Services},
+  volume    = {14},
+  number    = {4},
+  pages     = {352-375},
+  year      = {2018},
+  doi       = {10.1504/IJWGS.2018.095647}
+}
+
+@book{Antonopoulos2018MasteringEthereum,
+  author    = {Antonopoulos, Andreas M. and Wood, Gavin},
+  title     = {Mastering Ethereum: Building Smart Contracts and DApps},
+  publisher = {O'Reilly Media},
+  year      = {2018},
+  isbn      = {978-1491971949}
+}
+
+@inproceedings{Bartoletti2017EmpiricalAnalysis,
+  author    = {Bartoletti, Massimo and Pompianu, Livio},
+  title     = {An Empirical Analysis of Smart Contracts: Platforms, Applications, and Design Patterns},
+  booktitle = {Financial Cryptography and Data Security},
+  year      = {2017},
+  publisher = {Springer},
+  pages     = {494-509},
+  doi       = {10.1007/978-3-319-70278-0_31}
+}
+
+@inproceedings{Xu2019ArchitectingBlockchainApplications,
+  author    = {Xu, Xiwei and Weber, Ingo and Staples, Mark and Zhu, Liming and Bosch, Jan and Bass, Len and Pautasso, Cesare and Rimba, Paul},
+  title     = {A Taxonomy of Blockchain-Based Systems for Architecture Design},
+  booktitle = {IEEE International Conference on Software Architecture (ICSA)},
+  year      = {2019},
+  pages     = {243-252},
+  doi       = {10.1109/ICSA.2017.33}
+}
+
+@online{SolidityDocs,
+  title        = {Solidity Documentation},
+  url          = {https://docs.soliditylang.org/},
+  urldate      = {2025-05-15},
+  organization = {Ethereum Foundation},
+  year         = {2023}
+}
+
+@online{EthersJSDocs,
+  title        = {ethers.js Documentation},
+  url          = {https://docs.ethers.org/},
+  urldate      = {2025-05-20},
+  organization = {ethers},
+  year         = {2023}
+}
+
+@online{InfuraWeb3,
+  title        = {Infura Web3 API Documentation},
+  url          = {https://docs.infura.io/},
+  urldate      = {2025-05-22},
+  organization = {Consensys},
+  year         = {2023}
+}
+
+@online{MetaMaskDocs,
+  title        = {MetaMask Documentation},
+  url          = {https://docs.metamask.io/},
+  urldate      = {2025-05-20},
+  organization = {ConsenSys},
+  year         = {2023}
+}
+
+@article{Bamakan2020BlockchainPayment,
+  author    = {Bamakan, Seyed Mojtaba Hosseini and Motavali, Amir and Babaei Bondarti, Ali},
+  title     = {A survey of blockchain consensus algorithms performance evaluation criteria},
+  journal   = {Expert Systems with Applications},
+  volume    = {154},
+  pages     = {113385},
+  year      = {2020},
+  doi       = {10.1016/j.eswa.2020.113385}
+}
+
+@article{Wohrer2018SmartContractApplications,
+  author    = {Wöhrer, Maximilian and Zdun, Uwe},
+  title     = {Smart contracts: security patterns in the ethereum ecosystem and solidity},
+  booktitle = {International Workshop on Blockchain Oriented Software Engineering (IWBOSE)},
+  year      = {2018},
+  pages     = {2-8},
+  doi       = {10.1109/IWBOSE.2018.8327565}
+}
+
+@book{Dannen2017SoliditySmartContracts,
+  author    = {Dannen, Chris},
+  title     = {Introducing Ethereum and Solidity: Foundations of Cryptocurrency and Blockchain Programming for Beginners},
+  publisher = {Apress},
+  year      = {2017},
+  isbn      = {978-1484225349}
+}
+
+@article{Wust2018BlockchainNeed,
+  author    = {Wüst, Karl and Gervais, Arthur},
+  title     = {Do you need a Blockchain?},
+  booktitle = {Crypto Valley Conference on Blockchain Technology (CVCBT)},
+  year      = {2018},
+  pages     = {45-54},
+  doi       = {10.1109/CVCBT.2018.00011}
+}
+
+@article{Parizi2018SmartContractProgramming,
+  author    = {Parizi, Reza M. and Dehghantanha, Ali and Choo, Kim-Kwang Raymond and Singh, Amritraj},
+  title     = {Empirical Vulnerability Analysis of Automated Smart Contracts Security Testing on Blockchains},
+  booktitle = {28th Annual International Conference on Computer Science and Software Engineering},
+  year      = {2018},
+  pages     = {103-113}
+}
+
+@article{Casino2019BlockchainApplications,
+  author    = {Casino, Fran and Dasaklis, Thomas K. and Patsakis, Constantinos},
+  title     = {A systematic literature review of blockchain-based applications: Current status, classification and open issues},
+  journal   = {Telematics and Informatics},
+  volume    = {36},
+  pages     = {55-81},
+  year      = {2019},
+  doi       = {10.1016/j.tele.2018.11.006}
+}
+
+@article{Botha2021BackofficeBlockchain,
+  author    = {Botha, Johannes and Schutte, Christiaan and Steyn, Herman},
+  title     = {An Architecture for Blockchain Back-Office Systems for Supply Chain Management using Business Process Model and Notation},
+  journal   = {South African Journal of Industrial Engineering},
+  volume    = {32},
+  number    = {2},
+  pages     = {59-73},
+  year      = {2021},
+  doi       = {10.7166/32-2-2544}
+}
+
+@article{Andoni2019BlockchainOverview,
+  author    = {Andoni, Merlinda and Robu, Valentin and Flynn, David and Abram, Simone and Geach, Dale and Jenkins, David and McCallum, Peter and Peacock, Andrew},
+  title     = {Blockchain technology in the energy sector: A systematic review of challenges and opportunities},
+  journal   = {Renewable and Sustainable Energy Reviews},
+  volume    = {100},
+  pages     = {143-174},
+  year      = {2019},
+  doi       = {10.1016/j.rser.2018.10.014}
+}
+
 @online{AsanaCompetitiveAnalysis2024,
   author = {{Team Asana}},
   title = {How to create a competitive analysis (with examples)},
